--- a/style/style.scss
+++ b/style/style.scss
@@ -37,6 +37,11 @@ body {
   background: #f9f9f9;
   color: #333;
   font-size: 16px;
+  opacity: 0.5;
+}
+
+.container__card__login::placeholder{
+  color: black;
 }
 
 .container__card__login:focus {
@@ -59,3 +64,35 @@ body {
 .container__card__login__btn:hover {
   background-color: #215f91;
 }
+input[type=login],input[type=password] {
+  width:100%; 
+  max-width:250px;
+  border-radius:4px;
+  margin:8px 80px;
+  outline:none;
+  padding:8px;
+  box-sizing:border-box;
+}
+input[type=login],input[type=password]{
+  height:35px 
+}
+  .input-icone input[type=login] ,input[type=password]{
+  padding-left:35px; 
+}
+.input-icone{
+  position:relative; 
+}
+.input-icone i{
+  position:absolute;
+   left: 80px;; 
+   top:10px; 
+   padding:1px 8px; 
+   color:#000;
+}
+input[type=login]:hover{
+  background: #f2f2f2; 
+}
+.input[type=password]:hover{
+  background: #f2f2f2;
+}
+  
