--- a/style/style.scss
+++ b/style/style.scss
@@ -12,23 +12,30 @@ body {
 
 .container__card {
   width: 400px;
+  height: 450px;
   border: 1px solid #404040;
   border-radius: 10px;
   background: #405a73;
   text-align: center;
   color: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  display: block;
+  justify-content: center;
+  
+ 
+}
+.container__card__input{
+  padding-top: 30px;
 }
 
 .container__card h2 {
-  font-size: 24px;
-  margin-bottom: 60px;
+  font-size: 34px;
+  padding-top: 25px;
 }
 
 .container__card__login {
   display: block;
   box-sizing: border-box;
-  width: 100%;
   max-width: 300px;
   margin: 0 auto 20px auto;
   padding: 10px 15px;
@@ -49,9 +56,9 @@ body {
 }
 
 .container__card__login__btn {
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 20px;
-  padding: 10px 20px;
+  padding: 10px 40px;
   border: none;
   border-radius: 5px;
   background: #3389c2;
@@ -70,7 +77,7 @@ input[type=login],input[type=password] {
   border-radius:4px;
   margin:8px 80px;
   outline:none;
-  padding:8px;
+  padding:30px;
   box-sizing:border-box;
 }
 input[type=login],input[type=password]{
@@ -86,8 +93,9 @@ input[type=login],input[type=password]{
   position:absolute;
    left: 80px;; 
    top:10px; 
-   padding:1px 8px; 
-   color:#000;
+   /*gestion du placement des icones*/
+   padding: 10px 8px; 
+   color:#fff;
 }
 input[type=login]:hover{
   background: #f2f2f2; 
