--- a/style/style.scss
+++ b/style/style.scss
@@ -103,4 +103,36 @@ input[type=login]:hover{
 .input[type=password]:hover{
   background: #f2f2f2;
 }
-  
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'poppins', sans-serif;
+}
+
+.menu ul{
+  display: flex;
+  justify-content:space-around;
+  padding: 30px;
+  margin: 0;
+  list-style: none;
+  background:#405A73 ;
+ }
+
+.menu ul li a{
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3 ease;
+  justify-content: center;
+  padding: 10px;
+}
+.menu li:hover{
+  background: #273746;
+  border-radius: 10px;
+}
+
+.menu ul li {
+  margin-right: 20px;
+  font-size: 1.5em;
+}
