--- a/style/style.scss
+++ b/style/style.scss
@@ -136,3 +136,16 @@ input[type=login]:hover{
   margin-right: 20px;
   font-size: 1.5em;
 }
+@media screen and (max-width:700px){
+  .menu ul{
+      flex-direction: column;
+      padding: 10px;
+      justify-content: center;
+      align-items: center;
+  }
+  .menu ul li{
+      font-size: 1em;
+      margin-bottom: 10px;
+
+  }
+}
