debut page ecran/pc

--- a/style/style.scss
+++ b/style/style.scss
@@ -111,32 +111,46 @@ input[type=login]:hover{
   font-family: 'poppins', sans-serif;
 }
 
-.menu ul{
+.menu ul {
   display: flex;
   justify-content:space-around;
   padding: 30px;
   margin: 0;
   list-style: none;
   background:#405A73 ;
- }
-
-.menu ul li a{
-  color: #fff;
-  text-decoration: none;
-  transition: color 0.3 ease;
-  justify-content: center;
-  padding: 10px;
 }
 .menu li:hover{
-  background: #273746;
+  background:#273746 ;
   border-radius: 10px;
 }
 
 .menu ul li {
+  display: inline-block;
+  position: relative;
   margin-right: 20px;
   font-size: 1.5em;
 }
-@media screen and (max-width:700px){
+
+.menu ul li a {
+  text-decoration: none;
+  color: white; /* Couleur du texte des liens */
+  padding: 10px; /* Espacement interne des liens */
+  display: block;
+}
+
+.menu ul li ul {
+  display: none;
+  position: absolute;
+  min-width: 100px;
+  font-size: 0.5em;
+
+}
+
+.menu ul li:hover ul {
+  display: block;
+  left: 0;
+}
+@media screen and (max-width:768px){
   .menu ul{
       flex-direction: column;
       padding: 10px;
@@ -149,4 +163,5 @@ input[type=login]:hover{
 
   }
 }
+
 
